# pymsboot

./: .gitignore  Dockerfile  README.md  pymsboot.conf  requirements.txt  setup.cfg  start_api.py  start_engine.py  start_sync.py
compose/: postgresql.yml  pymsboot.yml  rabbitmq.yml
conf/: pymsboot.conf
pymsboot/: config.py  context.py  manager.py  rpc.py  version.py
pymsboot/api/: app.py  hooks.py  service.py
pymsboot/api/controllers/: base.py  root.py
pymsboot/api/controllers/v1/: movies.py  root.py
pymsboot/api/v1/: movie.py
pymsboot/cmd/: api.py  engine.py  sync.py
pymsboot/db/: api.py  models.py
pymsboot/db/tables/: movie.py
pymsboot/driver/: storage.py
pymsboot/engine/: manager.py  rpcapi.py  service.py
pymsboot/engine/indirection/: manager.py
pymsboot/movie/: driver.py  manager.py  rpcapi.py
pymsboot/objects/: __init__.py  base.py  movie.py
pymsboot/rpc/: manager.py  rpc.py  service.py
pymsboot/services/: periodics.py
pymsboot/sync/: scheduler.py
pymsboot/tests/: demo.ipynb  demo.py
resources/: pymsboot_log_rotate
tools/: cleanup_db.py  create_db.py
