[metadata]
name = pymsboot
summary = A example project for micro service architecture
description-file =
    README.md
author = fs714
author-email = fs714@163.com
home-page = https://github.com/fs714/pymsboot
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    pymsboot

[entry_points]
console_scripts =
    pymsboot-api = pymsboot.cmd.api:main
    pymsboot-engine = pymsboot.cmd.engine:main

oslo.config.opts =
    pymsboot.config = pymsboot.config:list_opts
